# agent-comm-channel

./: .gitattributes  .gitignore  Cargo.toml  LLM-POLICY.md  PROTOCOL.md  README.md
messages/: .gitkeep
src/: main.rs  secrets.rs
